--- a/package.json
+++ b/package.json
@@ -12,6 +12,18 @@
     "jquery": "^3.1.0",
     "laravel-mix": "^0.5.0",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "webpack": "^2.2.0",
+    "dropzone": "4.3.0",
+    "cropperjs": "1.0.0-beta"
+  },
+  "dependencies": {
+    "admin-lte": "^2.3.11",
+    "fastclick": "^1.0.6",
+    "font-awesome": "^4.7.0",
+    "ionicons": "^3.0.0",
+    "jquery-slimscroll": "^1.3.8",
+    "moment": "^2.17.1",
+    "sweetalert": "^1.1.3"
   }
 }
