--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ionicons": "^3.0.0",
     "jquery-slimscroll": "^1.3.8",
     "moment": "^2.17.1",
+    "owl-carousel-2": "0.0.3",
     "sweetalert": "^1.1.3"
   }
 }
